--- a/drf_auth/tests/test_app/templates/index.html
+++ b/drf_auth/tests/test_app/templates/index.html
@@ -1,1 +1,6 @@
+{% load staticfiles %}
 <h1>Index</h1>
+<div id="app"></div>
+
+<script type="text/javascript" src="http://127.0.0.1:3000/assets/bundles/vendors.js"></script>
+<script type="text/javascript" src="http://127.0.0.1:3000/assets/bundles/AuthApp.js"></script>
