--- a/drf_auth/templates/drf_auth/finish_signup.html
+++ b/drf_auth/templates/drf_auth/finish_signup.html
@@ -1,1 +1,7 @@
-<h1>Finish Signup</h1>
+{% load staticfiles %}
+<h1>Index</h1>
+<div>User: {{ request.user }}</div>
+<div id="app"></div>
+
+<script type="text/javascript" src="http://10.0.1.9:3000/assets/bundles/vendors.js"></script>
+<script type="text/javascript" src="http://10.0.1.9:3000/assets/bundles/AuthApp.js"></script>
